--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -112,6 +112,7 @@
                                                         <div class="flex items-center">
                                                             <ion-icon style="padding-left: 9vw;" class="text-2xl"
                                                                 name="trash-outline"></ion-icon>
+                                                            <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder;" name="checkmark-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
