--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -91,28 +91,34 @@
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon name="logo-facebook" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                            <ion-icon name="logo-facebook" style="padding-left: 7vw;" class="text-2xl"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon name="logo-twitter" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                            <ion-icon name="logo-twitter" style="padding-left: 7vw;" class="text-2xl"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl"
+                                                            <ion-icon style="padding-left: 7vw;" class="text-2xl"
                                                                 name="heart-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl"
-                                                                name="trash-outline"></ion-icon>
-                                                            <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder;" name="checkmark-outline"></ion-icon>
+                                                            <ion-icon style="padding-left: 7vw;" class="text-2xl" name="chatbubble-ellipses-outline"></ion-icon>
+
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+
+                                                            <ion-icon class="text-2xl" style="padding-left: 7vw;" class="text-2xl" style="color:#03A9F4; font-weight:bolder;" name="checkmark-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
