--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -65,9 +65,9 @@
                                                     </div>
                                                 </div>
                                             </td>
-                                            <td style="width: 50vw;">
+                                            <td style="width: 45vw;">
                                                 <h3 class="text-lg font-semibold"
-                                                    style="color: crimson; text-align: right;">ABONE OL
+                                                    style=" text-align: right;"> <ion-icon style="margin-top: -2px;" name="chatbubble-outline"></ion-icon> | <span style="color: crimson;">ABONE OL</span> 
                                                 </h3>
                                             </td>
                                         </tr>
