--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -91,7 +91,7 @@
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon name="logo-facebook" style="padding-left: 7vw;" class="text-2xl"></ion-icon>
+                                                            <ion-icon name="logo-whatsapp" style="padding-left: 7vw;" class="text-2xl"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
