--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -91,26 +91,26 @@
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon name="logo-whatsapp" style="padding-left: 7vw;" class="text-2xl"></ion-icon>
+                                                            <ion-icon name="logo-whatsapp" style="padding-left: 6vw;" class="text-2xl"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon name="logo-twitter" style="padding-left: 7vw;" class="text-2xl"></ion-icon>
+                                                            <ion-icon name="logo-twitter" style="padding-left: 6vw;" class="text-2xl"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 7vw;" class="text-2xl"
+                                                            <ion-icon style="padding-left: 6vw;" class="text-2xl"
                                                                 name="heart-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 7vw;" class="text-2xl" name="chatbubble-ellipses-outline"></ion-icon>
+                                                            <ion-icon style="padding-left: 6vw;" class="text-2xl" name="chatbubble-ellipses-outline"></ion-icon>
 
                                                             <span class="text-sm"></span>
                                                         </div>
@@ -118,9 +118,15 @@
                                                     <td>
                                                         <div class="flex items-center">
                                                             <b>
-                                                            <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder; padding-left: 7vw;" name="checkmark-outline"></ion-icon>
+                                                            <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder; padding-left: 6vw;" name="checkmark-outline"></ion-icon>
 
                                                             </b>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon class="text-2xl" style="padding-left: 6vw;" name="ellipsis-vertical"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
