--- a/views/front/duzenle.ejs
+++ b/views/front/duzenle.ejs
@@ -10,7 +10,8 @@
         }
     </style>
     <%- include ./part/header2.ejs %> 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous"></script>
     <div class="main_content">
         <div class="mcontainer">
             <div class="bg-white rounded-2xl -mt-4">
@@ -41,10 +42,16 @@
                             <td style="width: 100%;">
                                 <h3 class="text-lg font-semibold" style="padding-top: 50px;"> <span>Biyografi : </span>
                                 </h3>
-                                <textarea
+                                <textarea 
+                                    id="bio"
                                     class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"
                                     rows="14" rows="10" placeholder="Biyografi giriniz . . . "></textarea>
                                 <hr>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button onclick="kaydet()">Değiştir</button>
                             </td>
                         </tr>
                     </table>
@@ -55,26 +62,33 @@
 
 
     <script>
+        window.a
         function readURL(input) {
             console.log(input.files[0])
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
-    
                 reader.onload = function (e) {
                     console.log(e.target.result)
-                    axios.post("http://localhost:4005/image", {
-                        image: e.target.result,
-                        pid: "asdasdasdasd"
-                    }).then((response) => {
-                        alert(response)
-                    })
+                    window.a = e.target.result
                     $('#blah')
                         .attr('src', e.target.result)
                         .width(300)
                         .height(300);
                 };
-    
                 reader.readAsDataURL(input.files[0]);
             }
+        }
+
+        function kaydet() {
+            axios.post("/probio",{
+                photo:window.a,
+                bio:document.getElementById("bio").value
+            }).then(response=>{
+                if (response.data.status == true) {
+                    swal("Başarılı","Profil bilgileriniz başarıyla değiştirildi.","success")
+                } else {
+                    
+                }
+            })
         }
     </script>
