--- a/views/front/mesdemo.ejs
+++ b/views/front/mesdemo.ejs
@@ -30,22 +30,23 @@
 </style>
 
 <body>
-    <div class="panel-heading" style="border-bottom:1px solid lightgray; border-radius:10px;">
-        <table >
+    <div class="panel-heading" style="border-bottom:1px solid #f2f2f2; border-radius:10px; margin-top: -4px;">
+        <table>
             <tr>
                 <td>
-                    <ion-icon name="chevron-back-outline" style="color: gray; float: left; font-size: 24pt; padding-left: 20px;"></ion-icon>
+                    <ion-icon name="chevron-back-outline"
+                        style="color: gray; float: left; font-size: 24pt; padding-left: 20px;"></ion-icon>
                 </td>
                 <td>
                     <h3 class="panel-title" style="padding-top: 7px; padding-left: 5vw;">Ad Soyad</h3>
                 </td>
             </tr>
         </table>
-        
+
     </div>
     <div class="container bootstrap snippets bootdeys" id="app">
         <div class="col-md-7 col-xs-12 col-md-offset-2">
-            
+
             <div class="panel" id="chat">
 
                 <div class="panel-body" id="scrollChat" style="width: 100%; height: 70vh; overflow: scroll;">
@@ -76,22 +77,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-footer fixed-bottom">
-                    <hr>
-                    <form>
-                        <div class="input-group">
-                            <textarea type="text" v-model="text" style="border-radius: 30px;" class="form-control"
-                                placeholder="Mesajınız giriniz.." data-autoresize rows="1"></textarea>
-                            <span class="input-group-btn">
-                                <button class="btn" @click="mesajGonder()" style="border-radius: 100px;" type="button">
-                                    <i class="fa fa-chevron-right fa-2x" style="color: #62a8ea;"></i>
-                                </button>
-                            </span>
-                        </div>
-                    </form>
-                </div>
+
             </div>
-            <!-- End Panel Chat -->
+
+        </div>
+
+    </div>
+    <div class="panel-footer fixed-bottom">
+        <div class="input-group">
+            <textarea type="text" v-model="text" style="border-radius: 30px;" class="form-control"
+                placeholder="Mesajınız giriniz.." data-autoresize rows="1"></textarea>
+            <span class="input-group-btn">
+                <button class="btn" @click="mesajGonder()" style="border-radius: 100px;" type="button">
+                    <i class="fa fa-chevron-right fa-2x" style="color: #62a8ea;"></i>
+                </button>
+            </span>
         </div>
     </div>
 
@@ -178,9 +178,11 @@
         }
 
         .panel-footer {
-            padding: 0 30px 15px;
+            padding: 3px 15px 0;
+            padding-bottom: 2px;
             background-color: transparent;
-            border-top: 1px solid transparent;
+            border-top: 1px solid #f2f2f2;
+            border-radius: 10px;
             border-bottom-right-radius: 3px;
             border-bottom-left-radius: 3px;
         }
