--- a/views/front/mesdemo.ejs
+++ b/views/front/mesdemo.ejs
@@ -49,8 +49,9 @@
             <div class="panel" id="chat">
 
                 <div class="panel-body" id="scrollChat" style="width: 100%; height: 88vh; overflow: scroll;">
+                    <br>
                     <div class="chats" v-for="item in messages">
-                        <div class="chat">
+                        <div class="chat" style="margin-top: 15px; margin-bottom: 15px;">
                             <div class="chat-body">
                                 <div class="chat-content" style="border-radius: 10px !important;">
                                     <p>
@@ -74,7 +75,18 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="chat">
+                        <div class="chat" style="margin-top: 15px; margin-bottom: 15px;">
+                            <div class="chat-body">
+                                <div class="chat-content" style="border-radius: 10px !important;">
+                                    <p>
+                                        Deneme
+                                    </p>
+                                    <span style="margin-top: -22px;" class="chat-time"><small>1 saniye
+                                            önce</small></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="chat" style="margin-top: 15px; margin-bottom: 15px;">
                             <div class="chat-body">
                                 <div class="chat-content" style="border-radius: 10px !important;">
                                     <p>
@@ -98,7 +110,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="chat">
+                        <div class="chat" style="margin-top: 10px;">
                             <div class="chat-body">
                                 <div class="chat-content" style="border-radius: 10px !important;">
                                     <p>
